--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.1.7",
         "@vitejs/plugin-vue": "^6.0.1",
+        "recharts": "^3.2.1",
         "vue": "^3.5.21"
     }
 }
