--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.1.7",
         "@vitejs/plugin-vue": "^6.0.1",
+        "chart.js": "^4.5.0",
         "recharts": "^3.2.1",
-        "vue": "^3.5.21"
+        "vue": "^3.5.21",
+        "vue-chartjs": "^5.3.2"
     }
 }
