--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "chart.js": "^4.5.0",
         "recharts": "^3.2.1",
         "vue": "^3.5.21",
-        "vue-chartjs": "^5.3.2"
+        "vue-chartjs": "^5.3.2",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
