--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vitejs/plugin-vue": "^6.0.1",
         "chart.js": "^4.5.0",
         "recharts": "^3.2.1",
+        "sweetalert2": "^11.26.1",
         "vue": "^3.5.21",
         "vue-chartjs": "^5.3.2",
         "vue-toastification": "^2.0.0-rc.5"
